--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 
-* [debugger] Figure out why first line of Show! function is line 25 instead of
+* [debugger] Figure out why first line of Show! function is line 24 instead of
 line 23.
-  - this should give us nice function names in gdb (add a test).
-  - and maybe make the dwarfdump high address mismatch error go away?
+  For some reason gdb is skipping the first loc output. It does this for c
+  code too. I'm not sure how it's choosing to skip or not though.
 
 * [debugger] Do normal function calls in place.
   - instead of returning to the caller.
