Add tracking of self time in the profiler.
We sort of just dump the self time as an extra column in the profiling
report for the time being. Eventually we ought to clean that up so it's
sorted, or so we don't include a bunch of 0 columns, or whatever makes
sense.

Optimize fble-bench uses of Int|xxx that could be factored out.

fble bench interpreted: 7m43s -> 6m46s
fble bench compiled:    4m57s -> 4m21s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 
+* Consider adding 'self' time to profile outputs?
+
 * [debugger] Figure out why first line of Show! function is line 24 instead of
 line 23.
   For some reason gdb is skipping the first loc output. It does this for c
