--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,5 @@
 * [lang] Add support for abstract types.
- - Add abstract type, abstract value, and abstract access to FbleExpr.
- - Use VarType for abstract token type? We have a name to go with it.
- - Add AbstractTokenType and AbstractType to FbleType.
+ - Add support for abstract types to typecheck.c
  - Add more tests.
  - Try turning /Map% into an abstract type. And/or Int@.
 
