--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
 * [lang] Add support for abstract types.
- - Consider distinguishing between VAR_TYPE and ABSTRACT_TOKEN_TYPE again.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
  - Add more tests.
    Test that name of token type is a type name.
    Test what happens if a value is passed in <...> instead of a type.
+   Test error that would cause a raw abstract type to be printed.
    Test you can only create abstract types using token types, not arbitrary
    types. In particular, not arbitrary abstract variable types.
    A test for application to non-data type.
