--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
-* [lang] Add support for abstract types.
+* [lang] Clean up support for abstract types.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
  - Add more tests.
+   Test that you can't access an abstract value with the wrong token type.
+   Test use of non-token type to access an abstract value?
    Test that name of token type is a type name.
    Test what happens if a value is passed in <...> instead of a type.
    Test error that would cause a raw abstract type to be printed.
@@ -9,7 +11,7 @@
    A test for application to non-data type.
 
    For example, (Unit@) { Unit@; }(xxx);
- - Try turning /Map% into an abstract type. And/or Int@.
+ - Try turning Int@ into an abstract type.
 
 * [lang] Allow something of kind <@>@ to be used where @ is expected.
 
