--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+* [pinball]
+ - Add support for 2d motion.
+ - Add support for collisions against arbitrary edges.
+
 * [lang] Clean up support for abstract types.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
  - Add more tests.
