Pinball: Add collisions with multiple, arbitrary edges.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-* [pinball]
- - Add support for collisions against arbitrary edges.
+* [pinball] Figure out next steps.
 
 * [lang] Clean up support for abstract types.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
