Check that collision happens inside the edge segment.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * [pinball] 
- - Test and fix bug where edges are treated as lines instead of line segments.
+ - Make ball round and have width for collisions.
 
 * [lang] Clean up support for abstract types.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
