Take ball radius into account for collisions.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * [pinball] 
- - Take ball radius into account for collisions.
+ - Set up a more interesting world.
 
 * [lang] Clean up support for abstract types.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
