Make abstract Num@ type for use in Pinball.
An artifact of introducing the abstraction is we truncate the precision
of the numbers at every operation now, which fixes the issue with
noticeable lag when hitting diagonal edges.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * [pinball] 
- - Set up a more interesting world.
+ - Test and fix issue with ball falling outside of the world.
+ - Try switching Num@ from Rat@ to Int@ and see how performance changes.
 
 * [lang] Clean up support for abstract types.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
