Change collision logic to avoid ball going through walls.
The new logic has some other issues that need to be addressed though,
namely that the ball seems to gain energy from some collisions.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * [pinball] 
- - Test and fix issue with ball falling outside of the world.
+ - Fix issues with ball getting energy from collisions.
+ - Add support for paddles.
 
 * [lang] Clean up support for abstract types.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
