--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,5 @@
 * [pinball] 
- - Add controls for the paddle.
- - Add right paddle to app.
- - Improve performance in presence of paddles.
+ - Figure out how to prevent ball from going through paddle.
  - Take account of paddle velocity in collision.
 
 * [lang] Clean up support for abstract types.
