--- a/TODO.txt
+++ b/TODO.txt
@@ -20,10 +20,11 @@
 * [lang] Allow something of kind <@>@ to be used where @ is expected.
 
 * [debugger] Improve support for printing variables
+ - Specify type of variables as FbleValue*?
+   Or at least unsigned, to avoid signed/unsigned conversion issues.
  - Add VarDebugInfo for function static variables.
  - Write some helper C functions to decode FbleValue*.
  - Emit lexical scopes where appropriate.
- - Specify type of variables as FbleValue*?
 
 * Pull ReadInt and other native code for working with fble values out into
   separate libraries associated with their fble files.
